Splits file into Setup, Definitions and Functions sections.
Locates the project root of the script, so that the working directory can be external to the project directory.

Puts pipeline and dry_run arguments into parsers, and leaves space for kwargs.

If no pipeline is given, will try to run the Main pipeline (which does not currently do anything).

--- a/workflows/consensus-genome/Snakefile
+++ b/workflows/consensus-genome/Snakefile
@@ -4,11 +4,11 @@ Snakefile for consensus genome workflow.
 
 configfile: "workflows/consensus-genome/config.yaml"
 
-rule pipeline1_main:
+rule consensus_genome_main:
     input:
         "data/input/sample1.fastq"
     output:
-        "data/output/pipeline1.done"
+        "data/output/consensus-genome.done"
     params:
         max_reads = config.get("max_reads")
     script:
