--- a/workflows/consensus-genome/config.yaml
+++ b/workflows/consensus-genome/config.yaml
@@ -1,6 +1,5 @@
-"""
-Configuration for consensus genome workflow.
-"""
+# Configuration for consensus genome workflow.
+
 
 # Input and output file paths
 input:
